New endpoint for fetching historical stats
- Add new API enpoind for querying historical stats.
- Return the stats of the first day of each month for the specified instance.
- Update OpenAPI description.
- Update Readme.
